fix: business rules and add endpoint get status
