# sistema/src/main/java/com/aluguel_carros/sistema/infrastructure/controller/RentRequestController.java
@@ -10,10 +10,7 @@ import com.aluguel_carros.sistema.domain.service.UserService;
 import com.aluguel_carros.sistema.infrastructure.exception.RentRequestException;
 import com.aluguel_carros.sistema.infrastructure.exception.UnauthorizedException;
 import com.sistema_aluguel.api.PedidosAluguelApi;
-import com.sistema_aluguel.model.RentRequest;
-import com.sistema_aluguel.model.RentRequestResponse;
-import com.sistema_aluguel.model.RentRequestStatusUpdate;
-import com.sistema_aluguel.model.RentRequestUpdate;
+import com.sistema_aluguel.model.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -39,8 +36,11 @@ public class RentRequestController implements PedidosAluguelApi {
         if(!user.getRole().equals(Role.CLIENT)){
             throw new UnauthorizedException("Usuário não pode criar um pedido de aluguel");
         }
+
         var rentRequestEntity = rentRequestMapper.toDomain(rentRequest);
-        rentRequestService.createRentRequest(rentRequestEntity);
+        rentRequestEntity.setUser(user);
+        rentRequestEntity.setExecuted(Executed.PENDING);
+        rentRequestService.createRentRequest(rentRequestEntity, userId);
         return ResponseEntity.ok().build();
 
     }
@@ -49,9 +49,9 @@ public class RentRequestController implements PedidosAluguelApi {
     public ResponseEntity<Void> deleteRentRequest(Long userId, Long id) {
         var user = userService.getUserById(userId);
         if(!user.getRole().equals(Role.CLIENT)){
-            throw new UnauthorizedException("Usuário não pode criar um pedido de aluguel");
+            throw new UnauthorizedException("Usuário não pode cancelar um pedido de aluguel");
         }
-        rentRequestService.deleteRentRequest(id);
+        rentRequestService.deleteRentRequest(id, userId);
         return ResponseEntity.ok().build();
 
     }
@@ -59,7 +59,7 @@ public class RentRequestController implements PedidosAluguelApi {
     @Override
     public ResponseEntity<RentRequestResponse> getRentRequest(Long userId, Long id) {
         var user = userService.getUserById(userId);
-        if(!user.getRole().equals(Role.CLIENT) || !user.getRole().equals(Role.AGENT)){
+        if(!user.getRole().equals(Role.CLIENT) && !user.getRole().equals(Role.AGENT)){
             throw new UnauthorizedException("Usuário não pode buscar o pedido de aluguel");
         }
         var rentRequest = rentRequestService.getRentRequestById(id);
@@ -68,22 +68,26 @@ public class RentRequestController implements PedidosAluguelApi {
     }
 
     @Override
+    public ResponseEntity<RentRequestStatusResponse> getRentRequestStatus(Long userId, Long id) {
+        var user = userService.getUserById(userId);
+        if(!user.getRole().equals(Role.CLIENT) && !user.getRole().equals(Role.AGENT)){
+            throw new UnauthorizedException("Usuário não pode buscar o pedido de aluguel");
+        }
+        var rentRequest = rentRequestService.getRentRequestById(id);
+        return ResponseEntity.ok().body(rentRequestMapper.toStatusResponse(rentRequest));
+
+    }
+
+    @Override
     public ResponseEntity<RentRequestResponse> updateRentRequest(Long userId, Long id, RentRequestUpdate rentRequestUpdate) {
         var user = userService.getUserById(userId);
-        if(!user.getRole().equals(Role.CLIENT) || !user.getRole().equals(Role.AGENT)){
+        if(!user.getRole().equals(Role.CLIENT) && !user.getRole().equals(Role.AGENT)){
             throw new UnauthorizedException("Usuário não pode modificar o pedido de aluguel");
         }
-        var automobileRetrieved = automobileService.getAutomobileById(rentRequestUpdate.getAutomobileId());
-        var contractRetrieved = contractService.getContractById(rentRequestUpdate.getContractId());
-        var rentRequest = rentRequestService.getRentRequestById(id);
 
-        rentRequest.setContract(contractRetrieved);
-        rentRequest.setAutomobile(automobileRetrieved);
-        rentRequest.setPrice(rentRequestUpdate.getPrice());
-        rentRequest.setStartDate(rentRequestUpdate.getStartDate());
-        rentRequest.setEndDate(rentRequestUpdate.getEndDate());
+        var rentRequest = rentRequestMapper.toDomain(rentRequestUpdate);
 
-        rentRequest = rentRequestService.updateRentRequestStatus(rentRequest);
+        rentRequest = rentRequestService.updateRentRequest(rentRequest,id, userId);
 
         return ResponseEntity.ok().body(rentRequestMapper.toResponse(rentRequest));
     }
@@ -96,23 +100,24 @@ public class RentRequestController implements PedidosAluguelApi {
         }
 
         var rentRequest = rentRequestService.getRentRequestById(id);
-        Executed mappedStatus = mapStatusEnum(rentRequestStatusUpdate.getStatus());
 
         if(rentRequest.getExecuted().equals(Executed.APPROVED)){
-            throw new RentRequestException("Não pode mudar o status de aprovado.");
+            throw new RentRequestException("Não pode mudar o status de um pedido de aluguel já aprovado.");
         }
 
+        Executed mappedStatus = mapStatusEnum(rentRequestStatusUpdate.getStatus());
         rentRequest.setExecuted(mappedStatus);
+
+
+        rentRequestService.updateRentRequestStatus(rentRequest,userId);
         return ResponseEntity.ok().body(rentRequestMapper.toResponse(rentRequest));
     }
 
     private Executed mapStatusEnum(RentRequestStatusUpdate.StatusEnum statusEnum) {
         return switch (statusEnum) {
             case PENDING -> Executed.PENDING;
-            case APPROVED -> Executed.APPROVED;
-            case REJECTED -> Executed.REJECTED;
-            case CANCELED -> Executed.REJECTED;
-            case COMPLETED -> Executed.APPROVED;
+            case APPROVED, COMPLETED -> Executed.APPROVED;
+            case REJECTED, CANCELED -> Executed.REJECTED;
             default -> throw new IllegalArgumentException("Status não reconhecido: " + statusEnum);
         };
     }
